# ukr-energy-dash

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt  start.sh
.devcontainer/: devcontainer.json
.github/: template.yml
.github/rulesets/: default_or_main_branch_protected.json
.github/scripts/: rename_template_project.sh
.github/workflows/: main.yml  new_repo_check_required_token.yml  new_repo_configure_settings.yml  new_repo_rename_from_template.yml  pr_to_main_validate_commits_and_version.yml  required_placeholder_check.yml
assets/: style.css  styles.css
assets/data/: full_ukraine.geojson  power_stations_with_oblasts.geojson
callbacks/: __init__.py  chart_callbacks.py
components/: __init__.py  ui_components.py  utils.py
data/: __init__.py  data_loader.py  energy_data.csv  process.py
docs/configurations/: github_actions_token.md  repository_settings.md  workflows_to_main.md
docs/guidelines/: overview.md  version_and_release_management.md
layouts/: __init__.py  layout_main.py  main_layout.py
notebooks/: sample_data_template_project_name.ipynb  ukraine_energy_analysis.ipynb
src/data_template_project_name/: __init__.py
src/ukr_energy_dash/: __init__.py
tests/: test_dash_app.py  test_data_template_project_name.py  test_ukr_energy_dash.py
